Create general punish command /punish <player>
This will open up a punish gui with three categories (mute, kick, ban), then open the corresponding punish menu.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,6 +7,10 @@ commands:
   punishgui:
     description: Show plugin commands.
     permission: punishgui.help
+  punish:
+    description: Open the punishment GUi.
+    permission: punish.gui
+    usage: /punish <player>
   mutegui:
     description: Mute a player via GUI.
     permission: punishgui.mute
